Fix footer alignment

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -225,3 +225,10 @@ body {
 .reveal-modal-bg {
   position: fixed !important;
 }
+
+.addthis_button_facebook_share {
+  display: block !important;
+  margin-bottom: 10px !important;
+  text-align: left !important;
+  width: 100% !important;
+}
